# symbolica-community

./: .gitignore  Cargo.toml  LICENSE  Readme.md  pyproject.toml
.cargo/: config.toml
python/symbolica_community/: __init__.py  symbolica_community.pyi
python/symbolica_community/examples/physics/: tensors.py  vakint.py
python/symbolica_community/physics/: __init__.py
src/: lib.rs  physics.rs
src/physics/: tensors.rs  trace.rs  vakint.rs
