[package]
authors = ["Ben Ruijl <benruyl@gmail.com>"]
categories = ["science"]
description = "A blazing fast computer algebra system with community enhancements"
edition = "2021"
keywords = ["algebra", "symbolic", "manipulation", "mathematics", "physics"]
license = "MIT"
name = "symbolica"
readme = "Readme.md"
repository = "https://github.com/benruijl/symbolica-community"
rust-version = "1.73"
version = "0.1.0"

[features]
vakint = ["dep:vakint"]
spenso = ["dep:spenso"]
default = ["vakint"]


[profile.release]
codegen-units = 1
lto = true

[profile.dev-optim]
inherits = "dev"
opt-level = 3

[lib]
name = "symbolica_community"
crate-type = ["lib", "cdylib"]

[dependencies]
symbolica = { version = "0.13.0", features = ["python_no_module"] }
pyo3 = { version = "0.22.0", features = ["abi3-py37", "anyhow", "num-complex"] }

anyhow = "*"
vakint = { git = "https://github.com/alphal00p/vakint", branch = "main", optional = true }
spenso = { git = "https://github.com/alphal00p/spenso", branch = "master", optional = true, features = [
    "shadowing",
] }
